Remove mouse in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
+# tmux display in 256 color
+#set -g default-terminal "xterm-256color"
+
 # Make mouse useful in copy mode
-setw -g mouse on
+#setw -g mouse on
 
 ### Not valid after 2.1
 ## Allow mouse to select which pane to use
